<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_country"
            android:icon="@drawable/ic_menu_country"
            android:title="@string/nav_country" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_menu_alarm"
            android:title="@string/nav_alarm" />
        <item
            android:id="@+id/nav_mp3"
            android:icon="@drawable/ic_menu_mp3"
            android:title="@string/nav_mp3" />
    </group>

    <item android:title="@string/nav_settings_title">
        <menu>
            <item
                android:id="@+id/nav_prefs"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
