<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txtCountry"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:gravity="top"
        android:text="@string/header"
        android:textSize="24dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/lblCountry"
                android:layout_span="2" />

            <EditText
                android:id="@+id/addCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:ems="10"
                android:hint="@string/hintCountry"
                android:inputType="text"
                android:focusable="true"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/lblYear"
                android:layout_span="2" />

            <EditText
                android:id="@+id/addYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:ems="10"
                android:hint="@string/hintYear"
                android:inputType="date" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:onClick="addEntry"
                android:text="@string/btnAdd" />
        </TableRow>
    </TableLayout>
</LinearLayout>
